holyc-parser/tests/corpus/passing/179-surprises-surprise-default-outside-switch.hc
U0 EDOS_f() { dft: ; }
