holyc-parser/tests/corpus/failing/023-errors-err-case-outside-switch.hc
U0 ECOS_f() { case 1: ; }
